# RMS

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  approval-group-page-current.txt  backup.sql  claim-details-backup.txt  company-page.txt  firebase-service-account.json  openapi-latest.json  openapi.json  page.tsx  redis_store.txt  requirements.txt  step4.txt
Document/: Date.docx  (+4 more)
app/: main.py
rms-backend/: .dockerignore  .env  docker-compose.yml  project-structure.txt  pyproject.toml  requirements.txt
rms-backend/alembic/: script.py.mako
rms-backend/alembic/versions/: 20260529_1950_c85ab03995de_create_auth_tables.py  20260603_0938_bcb7d574ab2e_add_finance_review_audit_fields.py  20260614_2127_39b825c5ae0f_create_locations_table.py  20260615_0929_d3ae2579794e_create_employees_table.py  20260615_1317_a411e904f37b_create_projects_table.py  20260621_1038_b2cfe7b04887_add_reimbursement_expense_items.py  20260621_1215_9136d0e56251_create_uploaded_files_table.py  20260623_2322_214755b4d361_add_approval_groups.py  20260623_2343_a1e2e38d38d8_workflow_approval_group_support.py  20260705_2020_cbdade386984_add_stage_name_action_type_to_workflow_.py
rms-backend/app/api/v1/: router.py
rms-backend/app/auth/: __init__.py  password_utils.py
rms-backend/app/auth/models/: __init__.py  auth.py
rms-backend/app/auth/routers/: __init__.py
rms-backend/app/auth/schemas/: __init__.py  auth.py
rms-backend/app/auth/services/: auth_service.py
rms-backend/app/core/: email.py  logging.py
rms-backend/app/core/exceptions/: custom_exceptions.py  custom_exceptions.py.backup  handlers.py
rms-backend/app/models/: base.py
rms-backend/app/modules/company/models/: company.py
rms-backend/app/modules/company/repositories/: company_repository.py
rms-backend/app/modules/company/routers/: company_router.py
rms-backend/app/modules/company/schemas/: company_schema.py
rms-backend/app/modules/company/services/: company_service.py
rms-backend/app/modules/cost_center/repositories/: cost_center_repository.py
rms-backend/app/modules/cost_center/schemas/: cost_center_schema.py
rms-backend/app/modules/cost_center/services/: cost_center_service.py
rms-backend/app/modules/department/services/: department_service.py
rms-backend/app/modules/designation/schemas/: designation_schema.py
rms-backend/app/modules/designation/services/: designation_service.py
rms-backend/app/modules/employee/models/: employee.py
rms-backend/app/modules/employee/routers/: employee_router.py
rms-backend/app/modules/employee/schemas/: employee_schema.py
rms-backend/app/modules/employee/services/: employee_service.py
rms-backend/app/modules/expense_type/services/: expense_type_service.py
rms-backend/app/modules/file/routers/: file_router.py
rms-backend/app/modules/file/schemas/: file_schema.py
rms-backend/app/modules/location/schemas/: location_schema.py
rms-backend/app/modules/location/services/: location_service.py
rms-backend/app/modules/notification/model/: notification.py
rms-backend/app/modules/payment_method/models/: payment_method.py
rms-backend/app/modules/payment_method/schemas/: payment_method_schema.py
rms-backend/app/modules/payment_method/services/: payment_method_service.py
rms-backend/app/modules/project/repositories/: project_repository.py
rms-backend/app/modules/project/routers/: project_router.py
rms-backend/app/modules/project/services/: project_service.py
rms-backend/app/modules/reimbursement/: __init__.py
rms-backend/app/modules/reimbursement/models/: reimbursement.py
rms-backend/app/modules/reimbursement/repositories/: reimbursement_repository.py
rms-backend/app/modules/workflow/: engine.py
rms-backend/app/schemas/: __init__.py
rms-backend/app/services/: base.py
rms-backend/scripts/: seed_auth.py
(+269 files in other folders)
